<resources>
    <string name="app_name">Practical4_19012021012</string>
    <string name="btn_call">MAKE A CALL</string>
    <string name="btn_url">VIEW A WEBPAGE</string>
    <string name="txt_mobile_url_hint">Mobile No./ URL</string>

    <string name="btn_pick_contact">PICK A CONTACT</string>
    <string name="btn_view_call_log">VIEW CALL LOGS</string>
    <string name="btn_open_gallery">OPEN A GALLERY</string>
    <string name="btn_open_camera">OPEN A CAMERA</string>
    <string name="txt_alarm_msg">Alarm Message</string>
    <string name="btn_set_alarm">SET AN ALARM</string>

</resources>